# ComfyUI-kaola-ace-step

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MODEL_SETUP.md  Makefile  PROJECT_SUMMARY.md  README.md  TEST_REPORT.md  USAGE.md  __init__.py  acestep_common.py  acestep_sanitizer.py  acestep_wrapper.py  comfyui_trainer.py  config.example.json  diagnose_openmp.sh  install.sh  lora_training.py  nodes.py  nodes_base_features.py  nodes_captioner.py  nodes_transcriber.py  nodes_vram.py  pyproject.toml  requirements.txt  run_comfyui.sh  song_with_vocals.flac  start_comfyui.sh  start_with_fix.sh  test_1_text_to_music.flac  test_acestep.py  test_node.py  test_training.py  test_training_full.py  workflow_example.json
docs/: LORA_TRAINING.md  base_features.md
examples/: README.md  audio_repaint.json  batch_generation.json  captioner.json  complete.json  cover_generation.json  create_sample_to_music.json  extract-clean-VARM.json  extract.json  format_sample.json  lego.json  lora_cover_generation.json  lora_simple_mode.json  lora_text_to_music.json  lora_training_workflow.json  lora_training_workflow_fixed.json  music_with_lyrics.json  simple_mode.json  split_format_example_v2.json  text_to_music.json  transcriber.json  type_adapter_example_v2.json  type_adapter_simple_v2.json  understand_audio.json
test_outputs/: test1_lofi_beat.flac  test2_synth_pop_vocals.flac
workflows/: README.md  type_adapter_with_lora.json
