[project]
name = "comfyui-ace-step-nodes"
version = "1.0.0"
description = "ComfyUI custom nodes for ACE-Step 1.5 music generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
