[project]
name = "comfyui-kaola-ace-step"
description = "ACE-Step 1.5 music generation nodes for ComfyUI - Generate high-quality music from text"
version = "0.1.1"
license = { text = "MIT" }
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
]

[project.urls]
Repository = "https://github.com/kana112233/ComfyUI-kaola-ace_step"
Documentation = "https://github.com/kana112233/ComfyUI-kaola-ace_step#readme"

[tool.comfy]
PublisherId = "kana112233"
DisplayName = "Kaola ACE-Step Music"
Icon = ""

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
